--- a/production.yml
+++ b/production.yml
@@ -3,7 +3,7 @@ version: '3'
 volumes:
   production_postgres_data: {}
   production_postgres_data_backups: {}
-  production_caddy: {}
+  production_traefik: {}
 
 services:
   django: &django
@@ -30,17 +30,15 @@ services:
     env_file:
       - ./.envs/.production/.postgres
 
-  caddy:
+  traefik:
     build:
       context: .
-      dockerfile: ./compose/production/caddy/Dockerfile
-    image: learn_islam_production_caddy
+      dockerfile: ./compose/production/traefik/Dockerfile
+    image: learn_islam_production_traefik
     depends_on:
       - django
     volumes:
-      - production_caddy:/root/.caddy
-    env_file:
-      - ./.envs/.production/.caddy
+      - production_traefik:/etc/traefik/acme
     ports:
       - "0.0.0.0:80:80"
       - "0.0.0.0:443:443"
@@ -64,3 +62,11 @@ services:
     ports:
       - "5555:5555"
     command: /start-flower
+  awscli:
+    build:
+      context: .
+      dockerfile: ./compose/production/aws/Dockerfile
+    env_file:
+      - ./.envs/.production/.django
+    volumes:
+      - production_postgres_data_backups:/backups
