--- a/compose/production/traefik/traefik.toml
+++ b/compose/production/traefik/traefik.toml
@@ -16,7 +16,7 @@ defaultEntryPoints = ["http", "https"]
 # Enable ACME (Let's Encrypt): automatic SSL
 [acme]
 # Email address used for registration
-email = "daniel-roy-greenfeld@example.com"
+email = "mohamed.rez@gmail.com"
 storage = "/etc/traefik/acme/acme.json"
 entryPoint = "https"
 onDemand = false
@@ -38,4 +38,4 @@ OnHostRule = true
     [frontends.django.headers]
       HostsProxyHeaders = ['X-CSRFToken']
     [frontends.django.routes.dr1]
-      rule = "Host:example.com"
+      rule = "Host:api.m-minhaj.com"
