--- a/.gitignore
+++ b/.gitignore
@@ -153,7 +153,7 @@ typings/
 
 ### VisualStudioCode template
 .vscode/*
-!.vscode/settings.json
+# !.vscode/settings.json
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
@@ -331,3 +331,5 @@ learn_islam/media/
 .env
 .envs/*
 !.envs/.local/
+
+perso
