chore: upgrade to python 3.7 and use pipenv to install packages

--- a/compose/local/django/Dockerfile
+++ b/compose/local/django/Dockerfile
@@ -1,23 +1,11 @@
-FROM python:3.6-alpine
+FROM abumalick/alpine-python-pipenv-postgres:latest
 
-ENV PYTHONUNBUFFERED 1
-
-RUN apk update \
-  # psycopg2 dependencies
-  && apk add --virtual build-deps gcc python3-dev musl-dev \
-  && apk add postgresql-dev \
-  # Pillow dependencies
-  && apk add jpeg-dev zlib-dev freetype-dev lcms2-dev openjpeg-dev tiff-dev tk-dev tcl-dev \
-  # CFFI dependencies
-  && apk add libffi-dev py-cffi \
-  # Translations dependencies
-  && apk add gettext \
-  # https://docs.djangoproject.com/en/dev/ref/django-admin/#dbshell
-  && apk add postgresql-client
+RUN mkdir /app
+WORKDIR /app
 
 # Requirements are installed here to ensure they will be cached.
-COPY ./requirements /requirements
-RUN pip install -r /requirements/local.txt
+COPY Pipfile Pipfile.lock /app/
+RUN pipenv install --system --deploy --dev
 
 COPY ./compose/production/django/entrypoint /entrypoint
 RUN sed -i 's/\r//' /entrypoint
