--- a/compose/production/django/Dockerfile
+++ b/compose/production/django/Dockerfile
@@ -1,24 +1,16 @@
-
-FROM python:3.6-alpine
-
-ENV PYTHONUNBUFFERED 1
-
-RUN apk update \
-  # psycopg2 dependencies
-  && apk add --virtual build-deps gcc python3-dev musl-dev \
-  && apk add postgresql-dev \
-  # Pillow dependencies
-  && apk add jpeg-dev zlib-dev freetype-dev lcms2-dev openjpeg-dev tiff-dev tk-dev tcl-dev \
-  # CFFI dependencies
-  && apk add libffi-dev py-cffi
+FROM abumalick/alpine-python-pipenv-postgres:latest
 
 RUN addgroup -S django \
-    && adduser -S -G django django
+  && adduser -S -G django django
+
+RUN mkdir /app
+WORKDIR /app
+
+ENV PIP_NO_CACHE_DIR false
 
 # Requirements are installed here to ensure they will be cached.
-COPY ./requirements /requirements
-RUN pip install --no-cache-dir -r /requirements/production.txt \
-    && rm -rf /requirements
+COPY Pipfile Pipfile.lock /app/
+RUN pipenv install --system --deploy
 
 COPY ./compose/production/django/entrypoint /entrypoint
 RUN sed -i 's/\r//' /entrypoint
