--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,12 +15,12 @@ variables:
   POSTGRES_PORT: 5432
   POSTGRES_USER: debug
   POSTGRES_PASSWORD: debug
-  DATABASE_URL: postgres://debug:debug@postgres:5432/learn_islam
-  USE_DOCKER: no
-  IPYTHONDIR: /app/.ipython
-  CELERY_FLOWER_USER: debug
-  CELERY_FLOWER_PASSWORD: debug
-  REDIS_URL: redis://redis:6379/0
+  DATABASE_URL: 'postgres://debug:debug@postgres:5432/learn_islam'
+  USE_DOCKER: 'no'
+  IPYTHONDIR: '/app/.ipython'
+  CELERY_FLOWER_USER: 'debug'
+  CELERY_FLOWER_PASSWORD: 'debug'
+  REDIS_URL: 'redis://redis:6379/0'
 
 # This folder is cached between builds
 # http://docs.gitlab.com/ce/ci/yaml/README.html#cache
