--- a/Pipfile
+++ b/Pipfile
@@ -4,54 +4,54 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [dev-packages]
-ipdb = "==0.12"
-psycopg2 = "==2.8.2"
-mypy = "==0.711"
-pytest = "==4.6.3"
-pytest-sugar = "==0.9.2"
-flake8 = "==3.7.7"
-coverage = "==4.5.3"
+ipdb = "~=0.12"
+psycopg2 = "~=2.8.2"
+mypy = "~=0.711"
+pytest = "~=4.6.3"
+pytest-sugar = "~=0.9.2"
+flake8 = "~=3.7.7"
+coverage = "~=4.5.3"
 black = "==19.3b0"
-pylint-django = "==2.0.9"
-pylint-celery = "==0.3"
-factory-boy = "==2.12.0"
-django-debug-toolbar = "==2.0"
-django-extensions = "==2.1.9"
-pytest-django = "==3.5.1"
-Werkzeug = "==0.14.1"
-Sphinx = "==2.1.2"
-django_coverage_plugin = "==1.6.0"
+pylint-django = "~=2.0.9"
+pylint-celery = "~=0.3"
+factory-boy = "~=2.12.0"
+django-debug-toolbar = "~=2.0"
+django-extensions = "~=2.1.9"
+pytest-django = "~=3.5.1"
+Werkzeug = "~=0.14.1"
+Sphinx = "~=2.1.2"
+django_coverage_plugin = "~=1.6.0"
 
 [packages]
-pytz = "==2019.1"
-python-slugify = "==3.0.2"
-argon2-cffi = "==19.1.0"
-redis = "==3.2.1"
-celery = "==4.3.0"
-django-celery-beat = "==1.5.0"
-flower = "==0.9.3"
-django-environ = "==0.4.5"
-django-model-utils = "==3.2.0"
-django-allauth = "==0.39.1"
-django-crispy-forms = "==1.7.2"
-django-redis = "==4.10.0"
-djangorestframework = "==3.9.4"
-coreapi = "==2.3.3"
-graphene-django = "==2.2.0"
-graphene = "==2.1.3"
-graphql-core = "==2.1"
-graphql-relay = "==0.4.5"
-django-filter = "==2.0.0"
-django-graphql-jwt = "==0.2.0"
-django-cors-headers = "==2.4.0"
-gunicorn = "==19.9.0"
-psycopg2 = "==2.8.3"
+pytz = "~=2019.1"
+python-slugify = "~=3.0.2"
+argon2-cffi = "~=19.1.0"
+redis = "~=3.2.1"
+celery = "~=4.3.0"
+django-celery-beat = "~=1.5.0"
+flower = "~=0.9.3"
+django-environ = "~=0.4.5"
+django-model-utils = "~=3.2.0"
+django-allauth = "~=0.39.1"
+django-crispy-forms = "~=1.7.2"
+django-redis = "~=4.10.0"
+djangorestframework = "~=3.9.4"
+coreapi = "~=2.3.3"
+graphene-django = "~=2.2.0"
+graphene = "~=2.1.3"
+graphql-core = "~=2.1"
+graphql-relay = "~=0.4.5"
+django-filter = "~=2.0.0"
+django-graphql-jwt = "~=0.2.0"
+django-cors-headers = "~=2.4.0"
+gunicorn = "~=19.9.0"
+psycopg2 = "~=2.8.3"
 sentry-sdk = "*"
-django-storages = {extras = ["boto3"],version = "==1.7.1"}
-django-anymail = {extras = ["mailgun"],version = "==6.0.1"}
-Pillow = "==6.0.0"
-Django = "==2.1.8"
-Collectfast = "==0.6.2"
+django-storages = {extras = ["boto3"],version = "~=1.7.1"}
+django-anymail = {extras = ["mailgun"],version = "~=6.0.1"}
+Pillow = "~=6.0.0"
+Django = "~=2.1.8"
+Collectfast = "~=0.6.2"
 
 [requires]
 python_version = "3.7"
