--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,7 +27,8 @@ variables:
 # http://docs.gitlab.com/ce/ci/yaml/README.html#cache
 cache:
   paths:
-    - ~/.cache/pipenv
+    - /root/.cache/pipenv
+    - /usr/local/lib/python3.7/site-packages
 
 # This is a basic example for a gem or script which doesn't use
 # services such as redis or postgres
