--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,7 +24,7 @@ variables:
   CELERY_BROKER_URL: 'TODO'
   PIP_CACHE_DIR: '.cache/pip'
   PIPENV_CACHE_DIR: '.cache/pipenv'
-  PIPENV_VENV_IN_PROJECT: true
+  PIPENV_VENV_IN_PROJECT: 'true'
 
 # This folder is cached between builds
 # http://docs.gitlab.com/ce/ci/yaml/README.html#cache
