--- a/Pipfile
+++ b/Pipfile
@@ -8,15 +8,15 @@ black = "==19.3b0"
 coverage = "~=4.5.3"
 django_coverage_plugin = "~=1.6.0"
 django-debug-toolbar = "~=2.0"
-django-extensions = "~=2.1.9"
+django-extensions = "~=2.2.1"
 factory-boy = "~=2.12.0"
-flake8 = "~=3.7.7"
+flake8 = ">=3.7.8"
 ipdb = "~=0.12"
-mypy = "~=0.711"
+mypy = ">=0.711"
 psycopg2 = "~=2.8.2"
 pylint-celery = "~=0.3"
-pylint-django = "~=2.0.9"
-pytest = "~=4.6.3"
+pylint-django = "~=2.0.11"
+pytest = "~=5.0.1"
 pytest-django = "~=3.5.1"
 pytest-sugar = "~=0.9.2"
 Sphinx = "~=2.1.2"
@@ -27,26 +27,26 @@ argon2-cffi = "~=19.1.0"
 celery = "~=4.3.0"
 Collectfast = "~=0.6.2"
 coreapi = "~=2.3.3"
-Django = "~=2.1.10"
+Django = "~=2.2.3"
 django-allauth = "~=0.39.1"
-django-anymail = {extras = ["mailgun"],version = "~=6.0.1"}
+django-anymail = {extras = ["mailgun"],version = "~=6.1.0"}
 django-celery-beat = "~=1.5.0"
-django-cors-headers = "~=2.4.0"
+django-cors-headers = "~=3.0.2"
 django-crispy-forms = "~=1.7.2"
 django-environ = "~=0.4.5"
-django-filter = "~=2.0.0"
+django-filter = "~=2.2.0"
 django-graphql-jwt = "~=0.2.0"
 django-model-utils = "~=3.2.0"
 django-redis = "~=4.10.0"
 django-storages = {extras = ["boto3"],version = "~=1.7.1"}
-djangorestframework = "~=3.9.4"
+djangorestframework = "~=3.10.1"
 flower = "~=0.9.3"
 graphene = "~=2.1.3"
-graphene-django = "~=2.2.0"
+graphene-django = "~=2.4.0"
 graphql-core = "~=2.1"
 graphql-relay = "~=2.0.0"
 gunicorn = "~=19.9.0"
-Pillow = "~=6.0.0"
+Pillow = "~=6.1.0"
 psycopg2 = "~=2.8.3"
 python-slugify = "~=3.0.2"
 pytz = "~=2019.1"
