--- a/renovate.json
+++ b/renovate.json
@@ -1,5 +1,18 @@
 {
   "extends": [
     "config:base"
-  ]
+  ],
+   "major": {
+    "automerge": false,
+    "automergeType": "pr"
+    "masterIssueApproval": true
+  },
+  "automerge": true,
+  "automergeType": "branch"
+  "masterIssue": true,
+  "rangeStrategy": "bump",
+
+  "major": {
+    "automerge": false
+  }
 }
