fix: renovate configuration
fixes #40

--- a/renovate.json
+++ b/renovate.json
@@ -20,7 +20,7 @@
   "pipenv": { "enabled": true },
   "rangeStrategy": "bump",
   "vulnerabilityAlerts": {
-    "enabled": "true",
+    "enabled": true,
     "labels": ["security"]
   }
 }
